colepago-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colepago-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: api.drsrv.net.ar
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: colepago-backend
            port:
              number: 8282
  tls:
  - hosts:
    - api.drsrv.net.ar
    secretName: api-tls-secret
